FEAT: ADD scss and navbar

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="fr">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,3 +15,10 @@
     <!-- built files will be auto injected -->
   </body>
 </html>
+
+<style>
+    html, body {
+        margin:0;
+        padding:0;
+    }
+</style>
