MODIFY navbar et surtout css

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <script src="https://kit.fontawesome.com/6752ef64d0.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <noscript>
@@ -15,6 +16,14 @@
     <!-- built files will be auto injected -->
   </body>
 </html>
+
+<script type="text/javascript">
+    // window.addEventListener("scroll", function (e){
+    //
+    //     window.scrollTo(0,0);
+    //
+    // }, false);
+</script>
 
 <style>
     html, body {
